RPC       - New command "setwitnessrewardaddress"
RPC       - New command "restoreaccount"
RPC       - Improve behaviour of "deleteaccount" to permanently remove/purge accounts from the wallet if they are readonly accounts; as opposed to the regular behaviour of just hiding accounts that applies to other account types
RPC       - Fix return value of "enablenetwork" command
UI        - Show "elapsed" time to current date for witness accounts
ZMQ       - Add a new ZMQ channel "zmqpubwallettx"

And a variety of other small performance, stability and code quality enhancements, general maintenence etc..



2.3.12

CORE    - Mining/Witness stability fix; Fix an issue that was causing periodic freezing of some mining/witnessing nodes




2.3.11

Reduce eventual supply to a total of 750'000'000 coins as first step in implementing the supply reduction that has been requested by community/GAB; The intention is for the rewards to also change (as requested) however this will take place in a later release after a bit more time has been allowed for technical consideration of the implications.

MISC    - Minor performance improvements to witnessing
RPC     - New RPC command "submitheader"
RPC     - Fix an issue where "rotatewitnessaddress" would fail if used on account that has never performed any witness actions
RPC     - Introduce "forcesigseg" command (Only useful for development)
RPC     - Add command "repairwalletfromutxo"
RPC     - New command "decodeblock"
RPC     - New "defrag" command, this can be used to recombine lots of small "dust" outputs into one single output again
RPC     - New command "invalidateunwitnessedblocksatheight"

This build contains quite a large variety of misc. bug fixes, code improvements and stability fixes, quite a few backported from Novo development.




2.3.10
